# mapserver-tools

./: .gitignore  .gitlab-ci.yml  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: pytest.yml  syntax.yml
containers/mapcache/: Dockerfile  fcgid.conf  mapcache.conf  mapcache.xml
containers/mapserver/: .gitlab-ci.yml  Dockerfile  README.md  mapserver.conf
etc/: okd-satellite-layer-metadata.yaml
mapserver_tools/: __init__.py  edit_wms_mmd_xml_files.py
mapserver_tools/tests/: test-py-mmd-edit-resource.py  test_py_mmd_edit_resource.py
mapserver_tools/tests/testdata/: getcapabilities.xml
scripts/: py-mmd-edit-resource.py
scripts/tests/: test_py_mmd_edit_resource.py
scripts/tests/testdata/: noaa19-avhrr-20210901070230-20210901071648.xml
templates/: map-file-template-okd-satellite.map
