[metadata]
name = mapserver_tools
version = attr: mapserver_tools.__version__
author = MET Norway
author_email = servicedesk@met.no
description = Tools to manipulate mmd xml files
url = https://github.com/metno/mapserver-tools
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
project_urls =
    Source Code = https://github.com/metno/mapserver-tools

[options]
python_requires = >=3.6
include_package_data = True
scripts =
    scripts/py-mmd-edit-resource.py
packages = find:
install_requires =
    jinja2
    rasterio
    requests

[bdist_wheel]
universal = 0

[flake8]
ignore = E221,E226,E228,E241
max-line-length = 120
